--- a/OGV/packages/.gitignore
+++ b/OGV/packages/.gitignore
@@ -3,3 +3,30 @@
 /page-js-ie-support
 /HTML5-History-API
 /ogv-threejs
+/iron-router
+/blaze-layout
+/collectionFS
+/cfs-base-package
+/cfs-file
+/cfs-collection
+/cfs-collection-filters
+/cfs-access-point
+/cfs-worker
+/cfs-upload-http
+/cfs-filesaver
+/cfs-storage-adapter
+/http-methods
+/numeral
+/data-man
+/cfs-upload-ddp
+/cfs-tempstore
+/emitter
+/http-publish
+/cfs-gridfs
+/power-queue
+/reactive-list
+/cfs-graphicsmagick
+/cfs-ejson-file
+/cfs-filesystem
+/reactive-property
+/micro-queue
